--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon --inspect src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/doquoctuananh/nodejs.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/doquoctuananh/nodejs/issues"
-  },
-  "homepage": "https://github.com/doquoctuananh/nodejs#readme",
-  "dependencies": {
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
-  }
+    "name": "nodejs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon --inspect src/index.js",
+        "watch": "node-sass --watch src/resource/scss -o src/public/css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/doquoctuananh/nodejs.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/doquoctuananh/nodejs/issues"
+    },
+    "homepage": "https://github.com/doquoctuananh/nodejs#readme",
+    "dependencies": {
+        "express": "^4.18.2",
+        "express-handlebars": "^7.1.2",
+        "morgan": "^1.10.0",
+        "nodemon": "^3.0.1"
+    },
+    "devDependencies": {
+        "node-sass": "^9.0.0",
+        "sass": "^1.68.0"
+    }
 }
